[legman-yandex-static-api-experiment] два варианта как сделать миникарты в "Отчете по тревоге"

--- a/legman/client_report.html
+++ b/legman/client_report.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Личный кабинет</title>
   <link href="css/common.css" rel="stylesheet">
+  <link href="../radar/css/custom_map.css" rel="stylesheet">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.css" rel="stylesheet">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.5.2/fotorama.js"></script>
@@ -368,6 +369,373 @@
             </div>
           </div>
         </div>
+
+
+<!-- варианты вывода миникарт -->
+
+
+        <div class="pos-relative divider-wrapper ">
+          <h5 align="left"><pre>
+-------------------------------------------------------------------------------
+Первый вариант вывода миникарт
+-------------------------------------------------------------------------------
+У YandexStaticAPI запрашиваем карту с центром по координатам ГБР, и с одной
+точкой на карте -- по координатам объекта. Чтобы Яндекс сам выбрал масштаб
+карты, задаём также "область показа" в виде протяженности по долготе/широте
+(берём разность координаты центра карты и координаты объекта, удваиваем её,
+можно даже прибавить небольшой запас чтобы объект не прижимался к краям карты).
+
+Яндекс рисует стандартную метку на месте объекта --
+пусть это будет метка в виде красной мишени, она наиболее подходит по дизайну.
+А мы поверх картинки рисуем свою метку ГБР, координаты для острия метки мы
+точно знаем -- это центр картинки.
+
+Плюсы подхода:
+1) гарантия того, что метки расположены корректно, так как мы не
+   пересчитываем координаты меток, карту и метки позиционирует сам Яндекс;
+2) простота реализации, выбор охватывающего масштаба делает сам Яндекс;
+3) нет проблем с "уходящими" за край карты флажками -- метка ГБР всегда
+   по центру и для её флажка всегда есть место, а метка объекта не имеет
+   флажка;
+
+Минусы подхода:
+1) метка объекта выглядит не так как на ситуационной карте;
+2) зум в ряде случаев будет не самый детальный, то есть вероятно что можно ещё
+   "приблизить" карту, сдвинув ГБР от центра к краю.
+-------------------------------------------------------------------------------
+          </pre></h5>
+          <style>
+            .minimap-container {
+              /* сам контейнер среди элеменов отчёта позиционируется обычно */
+              position: relative;
+              /* размеры контейнера точно такие как у карты Яндекса*/
+              width: 435px;
+              height: 250px;
+            }
+            .minimap-yandex-map {
+              /* карта Яндекса ровно вписана в контейнер */
+              position: absolute;
+              left: 0px;
+              bottom: 0px;
+            }
+            .minimap-marker {
+              /*
+                 Левый нижний угол маркера ГБР нужно спозиционировать в центре контейнера.
+                 Центр находится легко -- делим пополам размеры контейнера. Однако,
+                 позаимствованный из Радара контейнер "marker" имеет сложную внутреннюю геометрию,
+                 и остриё маркера имеет сдвиг относительно левого нижнего угла контейнера.
+                 Величину этого сдвига нужно уточнить, примерно её можно оценить как 16px вправо и 26px вверх.
+                 Этот сдвиг нужно учесть, чтобы позиционировать не невидимый угол контейнера маркера,
+                 а именно остриё маркера.
+              */
+              position: absolute;
+              /* 435px / 2 - 16px (половина ширины контейнера минус сдвиг острия маркера) */
+              left: 202px;
+              /* 250px / 2 - 26px (половина высоты контейнера минус сдвиг острия маркера) */
+              bottom: 99px;
+            }
+          </style>
+        </div>
+
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Отказ от реагирования</h2>
+              <p>
+                Волкодав <br>
+                ≈ 53.1 км, 105 мин (Петровская улица, 13)
+              </p>
+              <div class="imgs">
+                <!--
+                координаты объекта - pt=30.325871,59.935633 (Дом Зингера)
+                координаты ГБР - ll=29.77398,59.987957 (Кронштадт)
+                область показа - spn=|(29.77398 - 30.325871) * 2|,|(59.987957 - 59.935633) * 2|
+                -->
+                <div class="minimap-container">
+                  <div class="minimap-yandex-map">
+                    <img src="http://static-maps.yandex.ru/1.x/?l=map&ll=29.77398,59.987957&size=435,250&pt=30.325871,59.935633,pm2rdm&spn=1.103782,0.104648" width="435" height="250" alt="">
+                  </div>
+                  <div class="minimap-marker">
+                    <!-- отрисовка маркера ГБР, взята из Радара -->
+                    <div class="marker guard alarmed">
+                      <span class="hint">Волкодав</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              Подтверждение вызова
+              <p>
+                Волкодав<br>
+                ≈ 8.7 км, 38 мин (Торфяная дорога, 4)
+              </p>
+              <div class="imgs">
+                <!--
+                координаты объекта - pt=30.325871,59.935633 (Дом Зингера)
+                координаты ГБР - ll=30.255254,59.989385 (метро Старая Деревня)
+                область показа - spn=|(30.255254 - 30.325871) * 2|,|(59.989385 - 59.935633) * 2|
+                -->
+                <div class="minimap-container">
+                  <div class="minimap-yandex-map">
+                    <img src="http://static-maps.yandex.ru/1.x/?l=map&ll=30.255254,59.989385&size=435,250&pt=30.325871,59.935633,pm2rdm&spn=0.141234,0.107504" width="435" height="250" alt="">
+                  </div>
+                  <div class="minimap-marker">
+                    <!-- отрисовка маркера ГБР, взята из Радара -->
+                    <div class="marker guard alarmed">
+                      <span class="hint">Волкодав</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Стою в пробке</h2>
+              <p>
+                Волкодав<br>
+                ≈ 1.6 км, 9 мин (Биржевая площадь, 4)
+              </p>
+              <div class="imgs">
+                <!--
+                координаты объекта - pt=30.325871,59.935633 (Дом Зингера)
+                координаты ГБР - ll=30.305551,59.943762 (Биржа)
+                область показа - spn=|(30.305551 - 30.325871) * 2|,|(59.943762 - 59.935633) * 2|
+                -->
+                <div class="minimap-container">
+                  <div class="minimap-yandex-map">
+                    <img src="http://static-maps.yandex.ru/1.x/?l=map&ll=30.305551,59.943762&size=435,250&pt=30.325871,59.935633,pm2rdm&spn=0.04064,0.016258" width="435" height="250" alt="">
+                  </div>
+                  <div class="minimap-marker">
+                    <!-- отрисовка маркера ГБР, взята из Радара -->
+                    <div class="marker guard alarmed">
+                      <span class="hint">Волкодав</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="pos-relative divider-wrapper">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Прибытие на объект</h2>
+              <p>
+                Волкодав<br>
+                ≈ 0.1 км, 1 мин (Невский проспект, 28)
+              </p>
+              <div class="imgs">
+                <!--
+                координаты объекта - pt=30.325871,59.935633 (Дом Зингера)
+                координаты ГБР - ll=30.326301,59.935566 (у Дома Зингера)
+                область показа - spn=|(30.326301 - 30.325871) * 2|,|(59.935566 - 59.935633) * 2|
+                -->
+                <div class="minimap-container">
+                  <div class="minimap-yandex-map">
+                    <img src="http://static-maps.yandex.ru/1.x/?l=map&ll=30.326301,59.935566&size=435,250&pt=30.325871,59.935633,pm2rdm&spn=0.00086,0.000134" width="435" height="250" alt="">
+                  </div>
+                  <div class="minimap-marker">
+                    <!-- отрисовка маркера ГБР, взята из Радара -->
+                    <div class="marker guard alarmed">
+                      <span class="hint">Волкодав</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="pos-relative divider-wrapper ">
+          <h5 align="left"><pre>
+-------------------------------------------------------------------------------
+Второй вариант вывода миникарт
+-------------------------------------------------------------------------------
+По координатам ГБР и объекта рассчитываем (используя Yandex JavaScript API):
+  - требуемый зум карты (из поддерживаемых Яндексом вариантов);
+  - координаты центра карты, подобранные так чтобы обе точки были видимы;
+  - сдвиг (в пикселях) ГБР относительно угла карты (для выбранного зума);
+  - сдвиг (в пикселях) объекта относительно угла карты (для выбранного зума);
+В расчётах следует учитывать, что точки не являются точками с нулевым размером,
+а имеют "флажки" некоторой длины, зависящей от надписи, и нужно делать поправки
+в расчётах чтобы метки самой верхней/правой точек не "ушли" за край карты.
+Учитывая малый размер карты, эти поправки лучше делать не "с запасом",
+а минимально необходимые, с учётом реальной длины флажка.
+
+У YandexStaticAPI запрашиваем карту без меток, указав зум и координаты центра.
+Поверх карты рисуем свою метку ГБР и свою метку объекта.
+
+Плюсы подхода:
+1) обе метки выглядят так же как на ситуационной карте.
+2) если правильно рассчитать размеры флажков, можно добиться максимально
+   детального зума.
+
+Минусы подхода:
+1) сложная математика по переводу геокоординат в пиксели для разных широт и
+   разных зумов, причём "сложная" == "ненадёжная", и если что-то не учесть,
+   будет трудноотлавливаемый баг с некорректным позиционированием меток;
+2) сложная математика по учёту длины флажков - нужно добиться того чтобы флажки
+   не вылезли за край карты, но размеры флажка зависят от шрифта и от надписи.
+-------------------------------------------------------------------------------
+          </pre></h5>
+          <style>
+            .minimap-container {
+              /* сам контейнер среди элеменов отчёта позиционируется обычно */
+              position: relative;
+              /* размеры контейнера точно такие как у карты Яндекса*/
+              width: 435px;
+              height: 250px;
+            }
+            .minimap-yandex-map {
+              /* карта Яндекса ровно вписана в контейнер */
+              position: absolute;
+              left: 0px;
+              bottom: 0px;
+            }
+            .minimap-marker {
+              /*
+                 "Остриё" маркера нужно будет спозиционировать по нужным координатам. Однако,
+                 позаимствованный из Радара контейнер "marker" имеет сложную внутреннюю геометрию,
+                 и остриё маркера имеет сдвиг относительно левого нижнего угла контейнера.
+                 Величину этого сдвига нужно уточнить, примерно её можно оценить как 16px вправо и 26px вверх.
+                 Этот сдвиг нужно учитывать, чтобы позиционировать не невидимый угол контейнера маркера,
+                 а именно остриё маркера.
+              */
+              position: absolute;
+              /* left:   ???px;  -- выставляем в js после пересчёта координат в пиксели */
+              /* bottom: ???px;  -- выставляем в js после пересчёта координат в пиксели */
+            }
+          </style>
+        </div>
+
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Отказ от реагирования</h2>
+              <p>
+                Волкодав <br>
+                ≈ 53.1 км, 105 мин (Петровская улица, 13)
+              </p>
+              <div class="imgs">
+                <!--
+                координаты объекта - 30.325871,59.935633 (Дом Зингера)
+                координаты ГБР - 29.77398,59.987957 (Кронштадт)
+
+                определяем минимально необходимый зум по горизонтали:
+                  разница координат: |30.325871 - 29.77398| = 0.551891
+                  плюс поправка на то чтобы флажок самой правой точки не "ушёл" за край = ??
+                  чтобы эта разница уместилась на картинке шириной 435 пикселей требуется зум = ??
+
+                определяем минимально необходимый зум по вертикали:
+                  разница координат: |59.935633 - 59.987957| = 0.052324
+                  плюс поправка на то чтобы флажок самой верхней точки не "ушёл" за край = ??
+                  чтобы эта разница уместилась на картинке высотой 250 пикселей требуется зум = ??
+                итого требуется зум z=9
+
+                рассчитываем геокоординаты центра карты,
+                делаем поправку на то чтобы уместились флажки, получаем ll=30.0499255,59.961795
+
+                после пересчёта геокоординат точек в пиксельный сдвиг
+                и корректировки на сдвиг острия маркера, получаем:
+                  для ГБР - left: 103px; bottom: 118px;
+                  для объекта - left: 303px; bottom: 82px;
+                -->
+                <div class="minimap-container">
+                  <div class="minimap-yandex-map">
+                    <img src="http://static-maps.yandex.ru/1.x/?l=map&z=9&ll=30.0499255,59.961795&size=435,250" width="435" height="250" alt="">
+                  </div>
+                  <div class="minimap-marker" style="left: 103px; bottom: 118px;">
+                    <!-- отрисовка маркера ГБР, взята из Радара -->
+                    <div class="marker guard alarmed">
+                      <span class="hint">Волкодав</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                  <div class="minimap-marker" style="left: 303px; bottom: 82px;">
+                    <!-- отрисовка маркера объекта, взята из Радара -->
+                    <div class="marker alarmed">
+                      <span class="hint">55555, 12:45</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="pos-relative divider-wrapper ">
+          <div class="time">
+            00:12
+          </div>
+          <div class="event-wrapper">
+            <div class="event group-event">
+              <h2>Стою в пробке</h2>
+              <p>
+                Волкодав<br>
+                ≈ 1.6 км, 9 мин (Биржевая площадь, 4)
+              </p>
+              <div class="imgs">
+                <!--
+                координаты объекта - 30.325871,59.935633 (Дом Зингера)
+                координаты ГБР - 30.305551,59.943762 (Биржа)
+                расчётный зум z=14
+                расчётный центр карты ll=30.315711,59.9396975
+                расчётный пиксельный сдвиг:
+                  для ГБР - left: 86px; bottom: 193px;
+                  для объекта - left: 323px; bottom: 7px;
+                -->
+                <div class="minimap-container">
+                  <div class="minimap-yandex-map">
+                    <img src="http://static-maps.yandex.ru/1.x/?l=map&z=14&ll=30.315711,59.9396975&size=435,250" width="435" height="250" alt="">
+                  </div>
+                  <div class="minimap-marker" style="left: 86px; bottom: 193px;">
+                    <!-- отрисовка маркера ГБР, взята из Радара -->
+                    <div class="marker guard alarmed">
+                      <span class="hint">Волкодав</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                  <div class="minimap-marker" style="left: 323px; bottom: 7px;">
+                    <!-- отрисовка маркера объекта, взята из Радара -->
+                    <div class="marker alarmed">
+                      <span class="hint">55555, 12:45</span><div class="corner"></div><div class="icon"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
       </div>
     </div>
   </div>
