--- a/legman/client_report.html
+++ b/legman/client_report.html
@@ -30,6 +30,17 @@
     </div>
   </div>
   <div class="container-narrow">
+		
+		<!-- Если ЧОП запретил доступ клиента к событиям. -->
+		<div class="title-timeline-wrapper client-report">
+			<h2>Ошибка</h2>
+	    <div class="title">
+	      <div class="right-title left-title">
+	        Доступ к событиям запрещён.
+	      </div>
+	    </div>
+		</div>
+		
     <div class="title-timeline-wrapper client-report">
       <div class="title-timeline">
         12 сентября, пн
@@ -371,6 +382,7 @@
       </div>
     </div>
   </div>
+	
   <div class="spacer">
   </div>
 </div>
