Ошибка, если не удалось сгенерировать ссылку для клиента.

--- a/legman/index.html
+++ b/legman/index.html
@@ -34,6 +34,7 @@
     <label for="link-input">Ссылка для клиента:</label>
     <input type="text" id="link-input" value="https://www.dropbox.com/s/63vb5m">
     <span class="link-block-navig"><a href="/">Открыть</a><span class="divider">|</span><a href="/"><i class="icon-refresh"></i></a></span>
+		<div class="error">Ошибка: сгенерировать ссылку не удалось.</div>
   </div>
   <div class="container-narrow">
     <div class="title">
