Добавил «крутилку», стиль hide и впилил крутилку для генерации ссылки на отчёт для клиента.

--- a/legman/index.html
+++ b/legman/index.html
@@ -33,7 +33,9 @@
   <div class="link-block">
     <label for="link-input">Ссылка для клиента:</label>
     <input type="text" id="link-input" value="https://www.dropbox.com/s/63vb5m">
-    <span class="link-block-navig"><a href="/">Открыть</a><span class="divider">|</span><a href="/"><i class="icon-refresh"></i></a></span>
+    <span class="link-block-navig">
+			<a href="/">Открыть</a><span class="divider">|</span><a href="/"><i class="icon-refresh"></i></a><i class="refresh hide"></i></span>
+		
 		<div class="error">Ошибка: сгенерировать ссылку не удалось.</div>
   </div>
   <div class="container-narrow">
