--- a/legman/index.html
+++ b/legman/index.html
@@ -33,10 +33,10 @@
   <div class="link-block">
     <label for="link-input">Ссылка для клиента:</label>
     <input type="text" id="link-input" value="https://www.dropbox.com/s/63vb5m">
-    <span class="link-block-navig">
-			<a href="/">Открыть</a><span class="divider">|</span><a href="/"><i class="icon-refresh"></i></a><i class="refresh hide"></i></span>
-		
-		<div class="error">Ошибка: сгенерировать ссылку не удалось.</div>
+    <span class="link-block-navig"> <a href="/">Открыть</a><span class="divider">|</span><a href="/"><i class="icon-refresh"></i></a><i class="refresh hide"></i></span>
+    <div class="error">
+      Ошибка: сгенерировать ссылку не удалось.
+    </div>
   </div>
   <div class="container-narrow">
     <div class="title">
@@ -63,6 +63,11 @@
                 Щуплова Наталья
               </p>
             </div>
+          </div>
+        </div>
+        <div class="data-wrapper">
+          <div class="title-timeline">
+            12 ноября, пн
           </div>
         </div>
         <div class="pos-relative divider-wrapper">
